--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -35,5 +35,32 @@
     <!-- boostrap script link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+    <!-- head -->
+     <head>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2 mt-5 mb-5">
+            <h1 class="text-center">Geschenkmanden</h1>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-lg-2 col-4">
+            <div class="card" style="width: 11rem;">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Chill & Unwind pack items</p>
+              </div>
+            </div>            
+          </div>
+          <div class="col-lg-4 col-8">
+            <p>deze doos bevat:</p>
+            <ol>
+              <li>Badolie</li>
+              <li></li>
+            </ol>
+          </div>
+        </div>
+      </div>
+     </head>
 </body>
 </html>
