--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZenZone Home</title>
+    <!--CSS Link-->
+    <link rel="stylesheet" href="CSS/style.css">
         <!-- boostrap link -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
+<body class="homepage">
         <!-- de navbar -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -34,6 +36,20 @@
           </nav>
         <!-- boostrap script link -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    
+<header class="homepage">
+<h1>Stress fades, relief flows</h1>
+</header> 
+<div class="about us">
+<p>
+  Wij zijn enthousiaste leerlingen van de secundaire school Sint-Gregorius, gedreven om een verschil te maken met onze leeronderneming. <br>
+  Onder begeleiding van onze leerkrachten, mevrouw Gossé en mevrouw Van den Broeck, zijn we gestart met een uniek project: het ontwikkelen en verkopen van anti-stress pakketten. <br>
+  Deze pakketten zijn zorgvuldig samengesteld om je te helpen ontspannen en stress te verminderen in het dagelijkse leven. <br>
+  Met onze leeronderneming willen we niet alleen ervaring opdoen in het bedrijfsleven, maar ook bijdragen aan een gezondere, ontspannen leefstijl. <br>
+  Neem een kijkje in ons aanbod en ontdek hoe onze producten jou kunnen helpen meer rust te vinden!
+  </p>
+</div>
+<footer class="homepage">
+
+</footer>   
 </body>
 </html>
