--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -56,8 +56,14 @@
             <p>deze doos bevat:</p>
             <ol>
               <li>Badolie</li>
-              <li></li>
+              <li>Bad- en douchegel</li>
+              <li>Geurkaars</li>
+              <li>Bodyscrub</li>
+              <li>Gezichtsmasker</li>
+              <li>Voetmasker</li>
+              <li>Warmtekussen</li>
             </ol>
+            <p>Prijs: €25,00</p>
           </div>
         </div>
       </div>
