--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -1,74 +1,82 @@
 <!DOCTYPE html>
 <html lang="nl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZenZone Geschenkmanden</title>
-     <!--CSS Link-->
-     <link rel="stylesheet" href="../CSS/style.css">
-    <!-- bootstrap link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-     <!-- navbar -->
-     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="ZenZone_Geschenkmanden.html">Geschenkmanden</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ZenZone_BestelFormulier.html">Bestelformulier</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ZenZone_FAQ.html">FAQ</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    <!-- boostrap script link -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-    <!-- head -->
-     <head>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2 mt-5 mb-5">
-            <h1 class="text-center">Geschenkmanden</h1>
-          </div>
-        </div>
-        <div class="row mt-5">
-          <div class="col-lg-2 col-4">
-            <div class="card" style="width: 11rem;">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Chill & Unwind pack items</p>
-              </div>
-            </div>            
-          </div>
-          <div class="col-lg-4 col-8">
-            <p>deze doos bevat:</p>
-            <ol>
-              <li>Badolie</li>
-              <li>Bad- en douchegel</li>
-              <li>Geurkaars</li>
-              <li>Bodyscrub</li>
-              <li>Gezichtsmasker</li>
-              <li>Voetmasker</li>
-              <li>Warmtekussen</li>
-            </ol>
-            <p>Prijs: €25,00</p>
-          </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ZenZone Geschenkmanden</title>
+  <!--CSS Link-->
+  <link rel="stylesheet" href="../CSS/style.css">
+  <!-- bootstrap link -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="ZenZone_Geschenkmanden.html">Geschenkmanden</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ZenZone_BestelFormulier.html">Bestelformulier</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ZenZone_FAQ.html">FAQ</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- boostrap script link -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
+  <!-- head -->
+
+  <head>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2 mt-5 mb-5">
+          <h1 class="text-center">Geschenkmanden</h1>
         </div>
       </div>
-     </head>
+      <div class="row mt-5">
+        <div class="col-lg-2 col-4">
+          <div class="card" style="width: 11rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Chill & Unwind pack items</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-8">
+          <p>deze doos bevat:</p>
+          <ol>
+            <li>Badolie</li>
+            <li>Bad- en douchegel</li>
+            <li>Geurkaars</li>
+            <li>Bodyscrub</li>
+            <li>Gezichtsmasker</li>
+            <li>Voetmasker</li>
+            <li>Warmtekussen</li>
+          </ol>
+          <p>Prijs: €25,00</p>
+        </div>
+      </div>
+    </div>
+  </head>
 </body>
+
 </html>
