--- a/index.html
+++ b/index.html
@@ -1,55 +1,72 @@
 <!DOCTYPE html>
 <html lang="nl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZenZone Home</title>
-    <!--CSS Link-->
-    <link rel="stylesheet" href="CSS/style.css">
-        <!-- boostrap link -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body class="homepage">
-        <!-- de navbar -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="html/ZenZone_Geschenkmanden.html">Geschenkmanden</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="html/ZenZone_BestelFormulier.html">Bestelformulier</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="html/ZenZone_FAQ.html">FAQ</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        <!-- boostrap script link -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<header class="homepage">
-<h1>Stress fades, relief flows</h1>
-</header> 
-<div class="about us">
-<p>
-  Wij zijn enthousiaste leerlingen van de secundaire school Sint-Gregorius, gedreven om een verschil te maken met onze leeronderneming. <br>
-  Onder begeleiding van onze leerkrachten, mevrouw Gossé en mevrouw Van den Broeck, zijn we gestart met een uniek project: het ontwikkelen en verkopen van anti-stress pakketten. <br>
-  Deze pakketten zijn zorgvuldig samengesteld om je te helpen ontspannen en stress te verminderen in het dagelijkse leven. <br>
-  Met onze leeronderneming willen we niet alleen ervaring opdoen in het bedrijfsleven, maar ook bijdragen aan een gezondere, ontspannen leefstijl. <br>
-  Neem een kijkje in ons aanbod en ontdek hoe onze producten jou kunnen helpen meer rust te vinden!
-  </p>
-</div>
-<footer class="homepage">
 
-</footer>   
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ZenZone Home</title>
+  <!--CSS Link-->
+  <link rel="stylesheet" href="CSS/style.css">
+  <!--Google fonts link-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=DM+Serif+Display:ital@0;1&family=Merienda:wght@300..900&display=swap"
+    rel="stylesheet">
+  <!-- boostrap link -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body class="homepage">
+  <!-- de navbar -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="html/ZenZone_Geschenkmanden.html">Geschenkmanden</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="html/ZenZone_BestelFormulier.html">Bestelformulier</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="html/ZenZone_FAQ.html">FAQ</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- boostrap script link -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <header class="homepage">
+    <h1>Stress fades, relief flows</h1>
+  </header>
+  <div class="about us">
+    <p class="homepage">
+      Wij zijn enthousiaste leerlingen van de secundaire school Sint-Gregorius, gedreven om een verschil te maken met
+      onze leeronderneming. <br>
+      Onder begeleiding van onze leerkrachten, mevrouw Gossé en mevrouw Van den Broeck, zijn we gestart met een uniek
+      project: het ontwikkelen en verkopen van anti-stress pakketten. <br>
+      Deze pakketten zijn zorgvuldig samengesteld om je te helpen ontspannen en stress te verminderen in het dagelijkse
+      leven. <br>
+      Met onze leeronderneming willen we niet alleen ervaring opdoen in het bedrijfsleven, maar ook bijdragen aan een
+      gezondere, ontspannen leefstijl. <br>
+      Neem een kijkje in ons aanbod en ontdek hoe onze producten jou kunnen helpen meer rust te vinden!
+    </p>
+  </div>
+  <footer class="homepage">
+
+  </footer>
 </body>
+
 </html>
