--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <header class="homepage">
-    <h1>Stress fades, relief flows</h1>
+    <img src="/Images/logo.png">
+    <h1 class="homepage">Stress fades, relief flows</h1>
   </header>
   <div class="about us">
     <p class="homepage">
       Wij zijn enthousiaste leerlingen van de secundaire school Sint-Gregorius, gedreven om een verschil te maken met
       onze leeronderneming. <br>
-      Onder begeleiding van onze leerkrachten, mevrouw Gossé en mevrouw Van den Broeck, zijn we gestart met een uniek
-      project: het ontwikkelen en verkopen van anti-stress pakketten. <br>
+      Onder begeleiding van onze leerkrachten, mevrouw Gossé en mevrouw Van den Broeck, <br>
+      zijn we gestart met een uniek project: het ontwikkelen en verkopen van anti-stress pakketten. <br>
       Deze pakketten zijn zorgvuldig samengesteld om je te helpen ontspannen en stress te verminderen in het dagelijkse
       leven. <br>
       Met onze leeronderneming willen we niet alleen ervaring opdoen in het bedrijfsleven, maar ook bijdragen aan een
