acordion + chill & unwind
een accordion toegevoegd aan geschenkmanden + chill & unwind groten deels gemaakt (nog geen toegang aan foto

--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -52,27 +52,71 @@
           <h1 class="text-center">Geschenkmanden</h1>
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-lg-2 col-4">
-          <div class="card" style="width: 11rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Chill & Unwind pack items</p>
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+              Chill & Unwind
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              <div class="row mt-5">
+                <div class="col-lg-4 col-6">
+                  <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Chill & Unwind pack items</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-8 col-6">
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <h4>Chill & Unwind</h4>
+                    </div>
+                    <div class="col-lg-6">
+                      <h4>Prijs: €25,00</h4>
+                    </div>
+                  </div>
+                  <p>deze doos bevat:</p>
+                  <ol>
+                    <li>Badolie</li>
+                    <li>Bad- en douchegel</li>
+                    <li>Geurkaars</li>
+                    <li>Bodyscrub</li>
+                    <li>Gezichtsmasker</li>
+                    <li>Voetmasker</li>
+                    <li>Warmtekussen</li>
+                  </ol>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-8">
-          <p>deze doos bevat:</p>
-          <ol>
-            <li>Badolie</li>
-            <li>Bad- en douchegel</li>
-            <li>Geurkaars</li>
-            <li>Bodyscrub</li>
-            <li>Gezichtsmasker</li>
-            <li>Voetmasker</li>
-            <li>Warmtekussen</li>
-          </ol>
-          <p>Prijs: €25,00</p>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo">
+              Accordion Item #2
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
+              Accordion Item #3
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
         </div>
       </div>
     </div>
