--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -109,12 +109,42 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
-              Accordion Item #3
+              Sport
             </button>
           </h2>
           <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show">
             <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <div class="row mt-5">
+                <div class="col-lg-4 col-6">
+                  <div class="card">
+                    <img src="../Images/Sport.jpg" class="card-img-top" alt="afbeelding van de items in de sport mand">
+                    <div class="card-body">
+                      <p class="card-text">Sport pack items</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-8 col-6">
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <h4>Sport</h4>
+                    </div>
+                    <div class="col-lg-6">
+                      <h4>Prijs: €25,00</h4>
+                    </div>
+                  </div>
+                  <p>deze doos bevat:</p>
+                  <ol>
+                    <li>Springtouw</li>
+                    <li>Weestandbanden</li>
+                    <li>Kaytan handtrainer</li>
+                    <li>Yogamat</li>
+                    <li>Bidon</li>
+                    <li>2KEEP energierepen</li>
+                    <li>Dadels</li>
+                    <li>Bamboe opbergmand</li>
+                  </ol>
+                </div>
+              </div>
             </div>
           </div>
         </div>
