--- a/Html/ZenZone_FAQ.html
+++ b/Html/ZenZone_FAQ.html
@@ -7,6 +7,12 @@
   <title>ZenZone FAQ</title>
   <!--CSS Link-->
   <link rel="stylesheet" href="../CSS/style.css">
+  <!--Google fonts link-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=DM+Serif+Display:ital@0;1&family=Merienda:wght@300..900&display=swap"
+    rel="stylesheet">
   <!-- bootstrap link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
