Snack Attack Caroussel Fix
Een probleem met de snack attack caroussel dat ervoor zorgde dat het de studdy buddy caroussel vooruit liet gaan

--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -141,7 +141,7 @@
                 <div class="col-lg-4 col-md-6">
                   <!-- start van de kaard waarin een carousell staat  -->
                   <div class="card w-75 mb-3 ms-5">
-                    <div id="carouselExample" class="carousel slide">
+                    <div id="carouselStuddyBuddy" class="carousel slide">
                       <div class="carousel-inner">
                         <div class="carousel-item active" style="height: 50vh">
                             <img src="../Images/StudyBuddy(1).jpg" class="d-block w-100 h-100" alt="afbeelding van één van de mogelijke studdy buddy items">
@@ -156,11 +156,11 @@
                         <img src="../Images/StudyBuddy(4).jpg" class="d-block w-100 h-100" alt="afbeelding van de andere mogelijke studdy buddy mand">
                       </div>
                       </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselStuddyBuddy" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                       </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselStuddyBuddy" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                       </button>
@@ -254,7 +254,7 @@
                 <div class="col-lg-4 col-md-6">
                   <!-- start van de kaard waarin een carousell staat  -->
                   <div class="card w-75 mb-3 ms-5">
-                    <div id="carouselExample" class="carousel slide">
+                    <div id="carouselSnackAttack" class="carousel slide">
                       <div class="carousel-inner">
                         <div class="carousel-item active" style="height: 50vh">
                             <img src="../Images/SnackAttack(1).jpg" class="d-block w-100 h-100" alt="Afbeelding van de snack attack items">
@@ -263,11 +263,11 @@
                           <img src="../Images/SnackAttack(2).jpg" class="d-block w-100 h-100" alt="Afbeelding van de snack attack mand">
                         </div>
                       </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselSnackAttack" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                       </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselSnackAttack" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                       </button>
@@ -278,7 +278,7 @@
                   </div>
                 </div>
 
-                <!-- andere kollomen en tekst van de Studdy Buddy mand -->
+                <!-- andere kollomen en tekst van de Snack Attack mand -->
                 <div class="col-lg-8 col-md-6 ms-md-0 ms-5">
                   <div class="row">
                     <div class="col-lg-6">
