Snack attack (gluten en lactosevrij)
de lactose en glutenvrije snack attack mand staat nu op de geschenkmanden pagina

--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -130,7 +130,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse"
-              data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+              data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true"
               aria-controls="panelsStayOpen-collapseTwo">
               Studdy Buddy
             </button>
@@ -209,7 +209,7 @@
                   <div class="card w-75 mb-3 ms-5">
                     <img src="../Images/Sport.jpg" class="card-img-top h-100" style="height: 50vh" alt="afbeelding van de items in de sport mand">
                     <div class="card-body">
-                      <p class="card-text">Sport pack items</p>
+                      <p class="card-text">Sport mand items</p>
                     </div>
                   </div>
                 </div>
@@ -243,7 +243,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse"
-              data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+              data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="true"
               aria-controls="panelsStayOpen-collapseFour">
               Snack Attack
             </button>
@@ -295,6 +295,54 @@
                     <li>Patisserie stroppwaffles</li>
                     <li>Milka chocolade naps mix</li>
                     <li>Chocolademelk-sticks</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- accordion item 5: snack attack (Gluten en Lactosevrij) -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="true"
+              aria-controls="panelsStayOpen-collapseFive">
+              Snack Attack (Gluten en Lactosevrij)
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              <div class="row mt-5">
+                <div class="col-lg-4 col-md-6">
+                  <!-- start van de kaard  -->
+                  <div class="card w-75 mb-3 ms-5">
+                    <img src="../Images/SnackAttack(Gluten en lactosevrij).jpg" class="card-img-top h-100" style="height: 50vh" alt="afbeelding van de items in de Snack attack mand">
+                    <div class="card-body">
+                      <p class="card-text">Snack attack (gluten en lactosevrij) mand items</p>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- andere kollomen en tekst van de Snack Attack mand -->
+                <div class="col-lg-8 col-md-6 ms-md-0 ms-5">
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <h4>Snack attack (gluten en lactosevrij)</h4>
+                    </div>
+                    <div class="col-lg-6">
+                      <h4>Prijs: €16,00</h4>
+                    </div>
+                  </div>
+                  <p>deze doos bevat:</p>
+                  <ol>
+                    <li>Cashewnoten</li>
+                    <li>Fuze tea</li>
+                    <li>Zure glimwormen</li>
+                    <li>Haribo mega mix</li>
+                    <li>Sprite</li>
+                    <li>Doritos bits sweet paprika</li>
+                    <li>Snacks world honey cashew</li>
                   </ol>
                 </div>
               </div>
