--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -78,11 +78,11 @@
                   <div class="card w-75 mb-3 ms-5">
                     <div id="carouselChill&Unwind" class="carousel slide">
                       <div class="carousel-inner">
-                        <div class="carousel-item active" style="height: 50vh">
-                          <img src="../Images/Chill&Unwind(1).jpg" class="d-block w-100 h-100" alt="de chill & unwind items">
+                        <div class="carousel-item active">
+                          <img src="../Images/Chill&Unwind(1).jpg" class="d-block w-100" alt="de chill & unwind items">
                         </div>
                         <div class="carousel-item" style="height: 50vh">
-                          <img src="../Images/Chill&Unwind(2).jpg" class="d-block w-100 h-100" alt="de chill & unwind mand">
+                          <img src="../Images/Chill&Unwind(2).jpg" class="d-block w-100" alt="de chill & unwind mand">
                         </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselChill&Unwind" data-bs-slide="prev">
@@ -143,17 +143,17 @@
                   <div class="card w-75 mb-3 ms-5">
                     <div id="carouselStuddyBuddy" class="carousel slide">
                       <div class="carousel-inner">
-                        <div class="carousel-item active" style="height: 50vh">
-                            <img src="../Images/StudyBuddy(1).jpg" class="d-block w-100 h-100" alt="afbeelding van één van de mogelijke studdy buddy items">
+                        <div class="carousel-item active">
+                            <img src="../Images/StudyBuddy(1).jpg" class="d-block w-100" alt="afbeelding van één van de mogelijke studdy buddy items">
                         </div>
-                        <div class="carousel-item" style="height: 50vh">
-                          <img src="../Images/StudyBuddy(2).jpg" class="d-block w-100 h-100" alt="afbeelding van één van de mogelijke studdy buddy manden">
+                        <div class="carousel-item">
+                          <img src="../Images/StudyBuddy(2).jpg" class="d-block w-100" alt="afbeelding van één van de mogelijke studdy buddy manden">
                         </div>
-                        <div class="carousel-item" style="height: 50vh">
-                          <img src="../Images/StudyBuddy(3).jpg" class="d-block w-100 h-100" alt="afbeelding  van de andere mogelijke studdy buddy items">
+                        <div class="carousel-item">
+                          <img src="../Images/StudyBuddy(3).jpg" class="d-block w-100" alt="afbeelding  van de andere mogelijke studdy buddy items">
                       </div>
-                      <div class="carousel-item" style="height: 50vh">
-                        <img src="../Images/StudyBuddy(4).jpg" class="d-block w-100 h-100" alt="afbeelding van de andere mogelijke studdy buddy mand">
+                      <div class="carousel-item">
+                        <img src="../Images/StudyBuddy(4).jpg" class="d-block w-100" alt="afbeelding van de andere mogelijke studdy buddy mand">
                       </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselStuddyBuddy" data-bs-slide="prev">
@@ -256,11 +256,11 @@
                   <div class="card w-75 mb-3 ms-5">
                     <div id="carouselSnackAttack" class="carousel slide">
                       <div class="carousel-inner">
-                        <div class="carousel-item active" style="height: 50vh">
-                            <img src="../Images/SnackAttack(1).jpg" class="d-block w-100 h-100" alt="Afbeelding van de snack attack items">
+                        <div class="carousel-item active">
+                            <img src="../Images/SnackAttack(1).jpg" class="d-block w-100" alt="Afbeelding van de snack attack items">
                         </div>
-                        <div class="carousel-item" style="height: 50vh">
-                          <img src="../Images/SnackAttack(2).jpg" class="d-block w-100 h-100" alt="Afbeelding van de snack attack mand">
+                        <div class="carousel-item">
+                          <img src="../Images/SnackAttack(2).jpg" class="d-block w-100" alt="Afbeelding van de snack attack mand">
                         </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselSnackAttack" data-bs-slide="prev">
