--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -82,7 +82,7 @@
                         <div class="carousel-item active">
                           <img src="../Images/Chill&Unwind(1).jpg" class="d-block w-100" alt="de chill & unwind items">
                         </div>
-                        <div class="carousel-item" style="height: 50vh">
+                        <div class="carousel-item">
                           <img src="../Images/Chill&Unwind(2).jpg" class="d-block w-100" alt="de chill & unwind mand">
                         </div>
                       </div>
