--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -329,7 +329,8 @@
                 <div class="col-lg-8 col-md-6 ms-md-0 ms-5">
                   <div class="row">
                     <div class="col-lg-6">
-                      <h4>Snack attack (gluten en lactosevrij)</h4>
+                      <h4>Snack attack </h4>
+                      <h4>(gluten en lactosevrij)</h4>
                     </div>
                     <div class="col-lg-6">
                       <h4>Prijs: €16,00</h4>
