css aangepast + contact info toegevoegd

--- a/index.html
+++ b/index.html
@@ -50,24 +50,28 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <header class="homepage">
-    <img src="/Images/logo.png">
-    <h1 class="homepage">Stress fades, relief flows</h1>
+
+    <h1 class="homepage"> <img class="homepage" src="/Images/logo.png"> Stress fades, relief flows</h1>
   </header>
   <div class="about us">
-    <p class="homepage">
-      Wij zijn enthousiaste leerlingen van de secundaire school Sint-Gregorius, gedreven om een verschil te maken met
-      onze leeronderneming. <br>
-      Onder begeleiding van onze leerkrachten, mevrouw Gossé en mevrouw Van den Broeck, <br>
-      zijn we gestart met een uniek project: het ontwikkelen en verkopen van anti-stress pakketten. <br>
-      Deze pakketten zijn zorgvuldig samengesteld om je te helpen ontspannen en stress te verminderen in het dagelijkse
-      leven. <br>
-      Met onze leeronderneming willen we niet alleen ervaring opdoen in het bedrijfsleven, maar ook bijdragen aan een
-      gezondere, ontspannen leefstijl. <br>
-      Neem een kijkje in ons aanbod en ontdek hoe onze producten jou kunnen helpen meer rust te vinden!
-    </p>
+    <h2 class="homepage">About us</h3>
+      <p class="homepage">
+        Wij zijn enthousiaste leerlingen van de secundaire school Sint-Gregorius, gedreven om een verschil te maken met
+        onze leeronderneming. <br>
+        Onder begeleiding van onze leerkrachten, mevrouw Gossé en mevrouw Van den Broeck, <br>
+        zijn we gestart met een uniek project: het ontwikkelen en verkopen van anti-stress pakketten. <br>
+        Deze pakketten zijn zorgvuldig samengesteld om je te helpen ontspannen en stress te verminderen in het
+        dagelijkse
+        leven. <br>
+        Met onze leeronderneming willen we niet alleen ervaring opdoen in het bedrijfsleven, maar ook bijdragen aan een
+        gezondere, ontspannen leefstijl. <br>
+        Neem een kijkje in ons aanbod en ontdek hoe onze producten jou kunnen helpen meer rust te vinden!
+      </p>
   </div>
   <footer class="homepage">
-
+    <h2 class="homepage">Contact info</h1>
+      <p class="homepage">Email : <a
+          href="mailto:leeronderneming6BO@ll.sintgregorius.be">leeronderneming6BO@ll.sintgregorius.be</a> </p>
   </footer>
 </body>
 
