--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -14,13 +14,13 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=DM+Serif+Display:ital@0;1&family=Merienda:wght@300..900&display=swap"
     rel="stylesheet">
-  <!-- bootstrap link -->
+  <!-- Bootstrap link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
-  <!-- navbar -->
+<body class="mandenPage">
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -45,25 +45,25 @@
       </div>
     </div>
   </nav>
-  <!-- boostrap script link -->
+  <!-- Boostrap script link -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-  <!-- head -->
+  <!-- Head -->
 
   <head>
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2 mt-5 mb-5">
-          <h1 class="text-center">Geschenkmanden</h1>
+          <h1 class="text-center mandenPage">Geschenkmanden</h1>
         </div>
       </div>
     </head>
-    <!-- einde head -->
+    <!-- Einde head -->
 
-    <!-- start main  -->
+    <!-- Start main  -->
     <main>
       
-      <!-- acordion item 1: chill & unwind geschenkmand -->
+      <!-- Acordion item 1: chill & unwind geschenkmand -->
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
@@ -72,10 +72,10 @@
             </button>
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
-            <div class="accordion-body">
+            <div class="accordion-body mandenPageAccordion">
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6">
-                  <!-- start van de kaard waarin een carousell staat  -->
+                  <!-- Start van de kaart waarin een carousell staat  -->
                   <div class="card w-75 mb-3 ms-5">
                     <div id="carouselChill&Unwind" class="carousel slide">
                       <div class="carousel-inner">
@@ -101,25 +101,25 @@
                   </div>
                 </div>
 
-                <!-- andere kollomen en tekst van de Chill & Unwind mand -->
+                <!-- Andere kollomen en tekst van de Chill & Unwind mand -->
                 <div class="col-lg-8 col-md-6 ms-md-0 ms-5">
                   <div class="row">
                     <div class="col-lg-6">
-                      <h4>Chill & Unwind</h4>
+                      <h4 class="mandenPage">Chill & Unwind</h4>
                     </div>
                     <div class="col-lg-6">
-                      <h4>Prijs: €25,00</h4>
+                      <h4 class="mandenPage">Prijs: €25,00</h4>
                     </div>
                   </div>
-                  <p>deze doos bevat:</p>
+                  <p class="mandenPage">deze doos bevat:</p>
                   <ol>
-                    <li>Badolie</li>
-                    <li>Bad- en douchegel</li>
-                    <li>Geurkaars</li>
-                    <li>Bodyscrub</li>
-                    <li>Gezichtsmasker</li>
-                    <li>Voetmasker</li>
-                    <li>Warmtekussen</li>
+                    <li class="mandenPage">Badolie</li>
+                    <li class="mandenPage">Bad- en douchegel</li>
+                    <li class="mandenPage">Geurkaars</li>
+                    <li class="mandenPage">Bodyscrub</li>
+                    <li class="mandenPage">Gezichtsmasker</li>
+                    <li class="mandenPage">Voetmasker</li>
+                    <li class="mandenPage">Warmtekussen</li>
                   </ol>
                 </div>
               </div>
@@ -127,7 +127,7 @@
           </div>
         </div>
 
-        <!-- accordion item 2: studdy buddy-->
+        <!-- Accordion item 2: studdy buddy-->
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -137,10 +137,10 @@
             </button>
           </h2>
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse show">
-            <div class="accordion-body">
+            <div class="accordion-body mandenPageAccordion">
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6">
-                  <!-- start van de kaard waarin een carousell staat  -->
+                  <!-- Start van de kaart waarin een carousell staat  -->
                   <div class="card w-75 mb-3 ms-5">
                     <div id="carouselStuddyBuddy" class="carousel slide">
                       <div class="carousel-inner">
@@ -172,23 +172,23 @@
                   </div>
                 </div>
 
-                <!-- andere kollomen en tekst van de Studdy Buddy mand -->
+                <!-- Andere kollomen en tekst van de Studdy Buddy mand -->
                 <div class="col-lg-8 col-md-6 ms-md-0 ms-5">
                   <div class="row">
                     <div class="col-lg-6">
-                      <h4>Studdy Buddy</h4>
+                      <h4 class="mandenPage">Studdy Buddy</h4>
                     </div>
                     <div class="col-lg-6">
-                      <h4>Prijs: €13,00</h4>
+                      <h4 class="mandenPage">Prijs: €13,00</h4>
                     </div>
                   </div>
-                  <p>deze doos bevat:</p>
+                  <p class="mandenPage">deze doos bevat:</p>
                   <ol>
-                    <li>Stumble guys figuren</li>
-                    <li>Planner</li>
-                    <li>Mini highlighterset</li>
-                    <li>Office essentials index tabs</li>
-                    <li>Pilot balpennen Frixionball sticks</li>
+                    <li class="mandenPage">Stumble guys figuren</li>
+                    <li class="mandenPage">Planner</li>
+                    <li class="mandenPage">Mini highlighterset</li>
+                    <li class="mandenPage">Office essentials index tabs</li>
+                    <li class="mandenPage">Pilot balpennen Frixionball sticks</li>
                   </ol>
                 </div>
               </div>
@@ -196,7 +196,7 @@
           </div>
         </div>
 
-        <!-- accordion item 3: sport geschenkmand -->
+        <!-- Accordion item 3: sport geschenkmand -->
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
@@ -204,7 +204,7 @@
             </button>
           </h2>
           <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show">
-            <div class="accordion-body">
+            <div class="accordion-body mandenPageAccordion">
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6 mb-2">
                   <div class="card w-75 mb-3 ms-5">
@@ -217,22 +217,22 @@
                 <div class="col-lg-8 col-md-6">
                   <div class="row">
                     <div class="col-lg-6">
-                      <h4>Sport</h4>
+                      <h4 class="mandenPage">Sport</h4>
                     </div>
                     <div class="col-lg-6">
-                      <h4>Prijs: €25,00</h4>
+                      <h4 class="mandenPage">Prijs: €25,00</h4>
                     </div>
                   </div>
-                  <p>deze doos bevat:</p>
+                  <p class="mandenPage">deze doos bevat:</p>
                   <ol>
-                    <li>Springtouw</li>
-                    <li>Weestandbanden</li>
-                    <li>Kaytan handtrainer</li>
-                    <li>Yogamat</li>
-                    <li>Bidon</li>
-                    <li>2KEEP energierepen</li>
-                    <li>Dadels</li>
-                    <li>Bamboe opbergmand</li>
+                    <li class="mandenPage">Springtouw</li>
+                    <li class="mandenPage">Weestandbanden</li>
+                    <li class="mandenPage">Kaytan handtrainer</li>
+                    <li class="mandenPage">Yogamat</li>
+                    <li class="mandenPage">Bidon</li>
+                    <li class="mandenPage">2KEEP energierepen</li>
+                    <li class="mandenPage">Dadels</li>
+                    <li class="mandenPage">Bamboe opbergmand</li>
                   </ol>
                 </div>
               </div>
@@ -240,7 +240,7 @@
           </div>
         </div>
 
-        <!-- accordion item 4: Snack Attack-->
+        <!-- Accordion item 4: Snack Attack-->
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -250,10 +250,10 @@
             </button>
           </h2>
           <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse show">
-            <div class="accordion-body">
+            <div class="accordion-body mandenPageAccordion">
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6">
-                  <!-- start van de kaard waarin een carousell staat  -->
+                  <!-- Start van de kaart waarin een carousell staat  -->
                   <div class="card w-75 mb-3 ms-5">
                     <div id="carouselSnackAttack" class="carousel slide">
                       <div class="carousel-inner">
@@ -279,23 +279,23 @@
                   </div>
                 </div>
 
-                <!-- andere kollomen en tekst van de Snack Attack mand -->
+                <!-- Andere kollomen en tekst van de Snack Attack mand -->
                 <div class="col-lg-8 col-md-6 ms-md-0 ms-5">
                   <div class="row">
                     <div class="col-lg-6">
-                      <h4>Snack attack</h4>
+                      <h4 class="mandenPage">Snack attack</h4>
                     </div>
                     <div class="col-lg-6">
-                      <h4>Prijs: €16,00</h4>
+                      <h4 class="mandenPage">Prijs: €16,00</h4>
                     </div>
                   </div>
-                  <p>deze doos bevat:</p>
+                  <p class="mandenPage">deze doos bevat:</p>
                   <ol>
-                    <li>Oreo</li>
-                    <li>Haribo fun mix</li>
-                    <li>Patisserie stroppwaffles</li>
-                    <li>Milka chocolade naps mix</li>
-                    <li>Chocolademelk-sticks</li>
+                    <li class="mandenPage">Oreo</li>
+                    <li class="mandenPage">Haribo fun mix</li>
+                    <li class="mandenPage">Patisserie stroppwaffles</li>
+                    <li class="mandenPage">Milka chocolade naps mix</li>
+                    <li class="mandenPage">Chocolademelk-sticks</li>
                   </ol>
                 </div>
               </div>
@@ -303,7 +303,7 @@
           </div>
         </div>
 
-        <!-- accordion item 5: snack attack (Gluten en Lactosevrij) -->
+        <!-- Accordion item 5: snack attack (Gluten en Lactosevrij) -->
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -313,10 +313,10 @@
             </button>
           </h2>
           <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse show">
-            <div class="accordion-body">
+            <div class="accordion-body mandenPageAccordion">
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6">
-                  <!-- start van de kaard  -->
+                  <!-- Start van de kaart -->
                   <div class="card w-75 mb-3 ms-5">
                     <img src="../Images/SnackAttack(Gluten en lactosevrij).jpg" class="card-img-top h-100" style="height: 50vh" alt="afbeelding van de items in de Snack attack mand">
                     <div class="card-body">
@@ -325,26 +325,26 @@
                   </div>
                 </div>
 
-                <!-- andere kollomen en tekst van de Snack Attack mand -->
+                <!-- Andere kollomen en tekst van de Snack Attack mand -->
                 <div class="col-lg-8 col-md-6 ms-md-0 ms-5">
                   <div class="row">
                     <div class="col-lg-6">
-                      <h4>Snack attack </h4>
-                      <h4>(gluten en lactosevrij)</h4>
+                      <h4 class="mandenPage">Snack attack </h4>
+                      <h4 class="mandenPage">(gluten en lactosevrij)</h4>
                     </div>
                     <div class="col-lg-6">
-                      <h4>Prijs: €16,00</h4>
+                      <h4 class="mandenPage">Prijs: €16,00</h4>
                     </div>
                   </div>
-                  <p>deze doos bevat:</p>
+                  <p class="mandenPage">deze doos bevat:</p>
                   <ol>
-                    <li>Cashewnoten</li>
-                    <li>Fuze tea</li>
-                    <li>Zure glimwormen</li>
-                    <li>Haribo mega mix</li>
-                    <li>Sprite</li>
-                    <li>Doritos bits sweet paprika</li>
-                    <li>Snacks world honey cashew</li>
+                    <li class="mandenPage">Cashewnoten</li>
+                    <li class="mandenPage">Fuze tea</li>
+                    <li class="mandenPage">Zure glimwormen</li>
+                    <li class="mandenPage">Haribo mega mix</li>
+                    <li class="mandenPage">Sprite</li>
+                    <li class="mandenPage">Doritos bits sweet paprika</li>
+                    <li class="mandenPage">Snacks world honey cashew</li>
                   </ol>
                 </div>
               </div>
@@ -353,7 +353,7 @@
         </div>
       </div>
     </main>
-      <!-- einde main -->
+      <!-- Einde main -->
 
     </div>
 </body>
