--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ZenZone Home</title>
   <link rel="icon" type="image/x-icon" href="Images/logo.png">
-  <!--CSS Link-->
+  <!-- CSS Link -->
   <link rel="stylesheet" href="CSS/style.css">
-  <!--Google fonts link-->
+  <!-- Google fonts link -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=DM+Serif+Display:ital@0;1&family=Merienda:wght@300..900&display=swap"
     rel="stylesheet">
-  <!-- boostrap link -->
+  <!-- Boostrap link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body class="homepage">
-  <!-- de navbar -->
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -45,14 +45,15 @@
       </div>
     </div>
   </nav>
-  <!-- boostrap script link -->
+  <!-- Boostrap script link -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <header class="homepage">
-
+    <!-- Logo + Slogan -->
     <h1 class="homepage"> <img class="homepage" src="/Images/logo.png"> Stress fades, relief flows</h1>
   </header>
+  <!-- About us tekstje -->
   <div class="about us">
     <h2 class="homepage">About us</h3>
       <p class="homepage">
@@ -68,6 +69,7 @@
         Neem een kijkje in ons aanbod en ontdek hoe onze producten jou kunnen helpen meer rust te vinden!
       </p>
   </div>
+  <!-- Contact info -->
   <footer class="homepage">
     <h2 class="homepage">Contact info</h1>
       <p class="homepage">Email : <a
