--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -208,7 +208,24 @@
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6 mb-2">
                   <div class="card w-75 mb-3 ms-5">
-                    <img src="../Images/Sport.jpg" class="card-img-top h-100" style="height: 50vh" alt="afbeelding van de items in de sport mand">
+                      <div id="carouselSport" class="carousel slide">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                              <img src="../Images/Sport.jpg" class="d-block w-100" alt="Afbeelding van de snack attack items">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../Images/Sport (1).jpg" class="d-block w-100" alt="Afbeelding van de snack attack mand">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselSport" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselSport" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
                     <div class="card-body">
                       <p class="card-text">Sport mand items</p>
                     </div>
@@ -318,7 +335,24 @@
                 <div class="col-lg-4 col-md-6">
                   <!-- Start van de kaart -->
                   <div class="card w-75 mb-3 ms-5">
-                    <img src="../Images/SnackAttack(Gluten en lactosevrij).jpg" class="card-img-top h-100" style="height: 50vh" alt="afbeelding van de items in de Snack attack mand">
+                      <div id="carouselSnackAttackGluten&LactoseVrij" class="carousel slide">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                              <img src="../Images/SnackAttack(Gluten en lactosevrij).jpg" class="d-block w-100" alt="Afbeelding van de snack attack items">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../Images/SnackAttack(Gluten en lactosevrij) (1).jpg" class="d-block w-100" alt="Afbeelding van de snack attack mand">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselSnackAttackGluten&LactoseVrij" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselSnackAttackGluten&LactoseVrij" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
                     <div class="card-body">
                       <p class="card-text">Snack attack (gluten en lactosevrij) mand items</p>
                     </div>
